# WoZ

./: CMakeLists.txt  README.md  TODO  WoZ.cpp  WoZ.hh  action.cpp  action.hh  complex_action.cpp  complex_action.hh  edit.cpp  edit.hh  facialExpression.cpp  facialExpression.hh  infoTab.cpp  infoTab.hh  paramTab.cpp  paramTab.hh  play.cpp  playlist.cpp  playlistTab.hh  record.hh  robot_interfaces.cpp  robot_interfaces.h  speech.cpp  speech.hh  status.cpp  status.hh  taskPlayerTab.cpp  taskPlayerTab.hh  utils.cpp  utils.hh
app/basicfiles/: action.conf  face.conf  speech.conf
app/conf/: WoZ.ini  face  recordTasks.ini
